Fix image paths in Art.html
Updated image paths in Art.html to remove 'website/' prefix.

--- a/Art.html
+++ b/Art.html
@@ -23,33 +23,33 @@
 
 <h1> Kriz's Art Works!</h1>
 <p> I'm the proudest friend whenever I see your works!</p>
-<img src="website/image/plushie.gif" alt="Let's Go!" class="design2">
+<img src="image/plushie.gif" alt="Let's Go!" class="design2">
 <br> <br>
 <hr>
 <hr>
 <hr>
-<img src="website/image/pinkstars.png" class="design3">
+<img src="image/pinkstars.png" class="design3">
 <hr>
 <hr>
 <hr>
-<br> <br>
-
-
-<img src="website/image/kriz_work1.jpg" class="main">
-<br> <br>
-<img src="website/image/star68.gif" class="design1">
-<br> <br>
-<img src="website/image/work1.png.jpg" class="main">
-<br> <br>
-<img src="website/image/dolphintail.gif" class="design1">
-<br> <br>
-<img src="website/image/kriz_work2.jpg" class="main">
 <br> <br>
 
+
+<img src="image/kriz_work1.jpg" class="main">
+<br> <br>
+<img src="image/star68.gif" class="design1">
+<br> <br>
+<img src="image/work1.png.jpg" class="main">
+<br> <br>
+<img src="image/dolphintail.gif" class="design1">
+<br> <br>
+<img src="image/kriz_work2.jpg" class="main">
+<br> <br>
+
 <hr>
 <hr>
 <hr>
-<img src="website/image/pinkstars.png" class="design3">
+<img src="image/pinkstars.png" class="design3">
 <hr>
 <hr>
 <hr>
@@ -62,31 +62,31 @@
 <p1 style="color: rgb(10, 234, 211); font-size: 30px;"> My</p1>
 <br>
 <p1 style="color: rgb(255, 242, 3); font-size: 50px; font-family: counter-reset"> <strong> Fave </strong></p1>
-<img src="website/image/work5.png.jpg" class="main1"> 
+<img src="image/work5.png.jpg" class="main1"> 
 <p style="color: rgb(222, 222, 208); font-family: 'Courier New', Courier, monospace; font-size: medium;"> <strong>  And you know exactly why ;> It's the Best Gift I ever received </strong></p>
 <p> </p>
 <p style="color: rgb(251, 255, 240);"> Literally my reaction when I received it: </p>
-<img src="website/image/twilight.gif" class="design4">
+<img src="image/twilight.gif" class="design4">
 <br> <br>
 <hr>
 <hr>
 <hr>
-<img src="website/image/pinkstars.png" class="design3">
+<img src="image/pinkstars.png" class="design3">
 <hr>
 <hr>
 <hr>
 
 <br> <br>
 <br> <br>
-<img src="website/image/bear30.gif" class="design1">
+<img src="image/bear30.gif" class="design1">
 <br> <br>
-<img src="website/image/work4.png.jpg" class="main">
+<img src="image/work4.png.jpg" class="main">
 <br> <br>
-<img src="website/image/dolphintail.gif" class="design1">
+<img src="image/dolphintail.gif" class="design1">
 <br> <br>
-<img src="website/image/work3.png.jpg" class="main">
+<img src="image/work3.png.jpg" class="main">
 <br> <br>
-<img src="website/image/star68.gif" class="design1">
+<img src="image/star68.gif" class="design1">
 
 
 
@@ -94,3 +94,4 @@
 
 
 </html>
+
