Fix HTML formatting and update image paths

--- a/Art.html
+++ b/Art.html
@@ -23,12 +23,12 @@
 
 <h1> Kriz's Art Works!</h1>
 <p> I'm the proudest friend whenever I see your works!</p>
-<img src="image/plushie.gif" alt="Let's Go!" class="design2">
+<img src="/image/plushie.gif" alt="Let's Go!" class="design2">
 <br> <br>
 <hr>
 <hr>
 <hr>
-<img src="image/pinkstars.png" class="design3">
+<img src="./image/pinkstars.png" class="design3">
 <hr>
 <hr>
 <hr>
@@ -94,4 +94,5 @@
 
 
 </html>
+
 
