--- a/Art.html
+++ b/Art.html
@@ -23,12 +23,12 @@
 
 <h1> Kriz's Art Works!</h1>
 <p> I'm the proudest friend whenever I see your works!</p>
-<img src="/images/plushie.gif" alt="Let's Go!" class="design2">
+<img src="images/plushie.gif" alt="Let's Go!" class="design2">
 <br> <br>
 <hr>
 <hr>
 <hr>
-<img src="./images/pinkstars.png" class="design3">
+<img src="images/pinkstars.png" class="design3">
 <hr>
 <hr>
 <hr>
@@ -94,6 +94,7 @@
 
 
 </html>
+
 
 
 
