--- a/Ropa.html
+++ b/Ropa.html
@@ -17,7 +17,7 @@
     </head>
     <body>
     <br> <br> <br>
-    <img src="hello8.gof.gif" class="hello">
+    <img src="images/hello8.gof.gif" class="hello">
     <br> <br>
     <br> <br>
     <br> <br>
@@ -28,7 +28,7 @@
         </audio>
         </div>
         <br>
-        <img src="star68.gif" class="star">
+        <img src="images/star68.gif" class="star">
         <br>
         <div id="container1">    
         <p id="Arm" > Chie's Letter!</p>
@@ -58,7 +58,7 @@
         <br>
 
 
-        <img src="star68.gif" class="star">
+        <img src="images/star68.gif" class="star">
         <br>
         <div id="container2">
         <p id="Arm" > Eddy's Letter!</p>
@@ -69,7 +69,7 @@
         <br>
 
 
-        <img src="star68.gif" class="star">
+        <img src="images/star68.gif" class="star">
         <br>
         <div id="container3">
         <p id="Arm" > DK's Letter!</p>
@@ -80,7 +80,7 @@
         <br>
 
 
-        <img src="star68.gif" class="star">
+        <img src="images/star68.gif" class="star">
         <br>
         <div id="container4">
         <p id="Arm" > Melay's Letter!</p>
@@ -91,7 +91,7 @@
         <br>
 
 
-        <img src="star68.gif" class="star">
+        <img src="images/star68.gif" class="star">
         <br>
         <div id="container5">
         <p id="Arm" > Vine's Letter!</p>
@@ -102,7 +102,7 @@
         <br>
 
 
-        <img src="star68.gif" class="star">
+        <img src="images/star68.gif" class="star">
         <br>
         <div id="container6">
         <p id="Arm" > Luwi's Letter!</p>
@@ -113,7 +113,7 @@
         </p>
         </div>
         <br>
-        <img src="star68.gif" class="star">
+        <img src="images/star68.gif" class="star">
         <br>
         </div>
         <div id="container7">
@@ -132,6 +132,7 @@
         </p>
         
     </body>
+
 
 
 
