--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <body>
 <br> <br>
 <br> <br>
-<img src="welcome7.gif" alt="Welcome Banner" class="welcome">
+<img src="images/welcome7.gif" alt="Welcome Banner" class="welcome">
 <br>
  <p style="color: rgba(43, 42, 42, 0.889); font-size: medium; text-align: center; font-family: sans-serif;">  Collage Pictures are over-rated! Here's a website made just for you hehe :> </p>
  <p style="color: rgba(68, 67, 67, 0.889); font-size: large; text-align: center;"> <strong> Enjoy Exploring! </strong></p>
  <br>
-<img src="200w.gif" class="cake">
+<img src="images/200w.gif" class="cake">
 <div class="audio">
     <audio controls autoplay loop>
     <source src="Happy Birthday 80's - E's Jammy Jams.mp3" type="audio/mpeg">
@@ -26,18 +26,18 @@
 
 <div id="box1" class="box">
     <p style="text-align: center; color:black"> 
-        <strong>Special Surprise</strong>
+    <strong>Special Surprise</strong>
     </p>
   
     <div id="box2" class="box"> 
-        <p style="text-align: center;"> 
+    <p style="text-align: center;"> 
           
-           <a href="page2.html">
-           <i class="fa-solid fa-gift fa-shake fa-sm" style="color: #e60404fc;"></i>
-            Unlock my Gift!
-            </a>
-            <i class="fa-solid fa-gift fa-shake fa-sm" style="color: #e60404fc;"></i>
-        </p>
+    <a href="page2.html">
+    <i class="fa-solid fa-gift fa-shake fa-sm" style="color: #e60404fc;"></i>
+    Unlock my Gift!
+    </a>
+    <i class="fa-solid fa-gift fa-shake fa-sm" style="color: #e60404fc;"></i>
+    </p>
     </div>
 <br>
 <p style="text-align: center;"> 
@@ -45,12 +45,12 @@
   <i class="fa-chisel fa-regular fa-heart fa-beat fa-2xl" style="color: #c11b09;"></i>
   <i class="fa-solid fa-star fa-xl" style="color: #FFD43B;"></i>
 </p>
-    <p style="text-align: center; font-size: small; color: black"> 
-
-      Created w/love
-    </p>
+<p style="text-align: center; font-size: small; color: black"> 
+Created w/love
+</p>
 </div>
 <br> <br> <br>
- <img src="textsweetthings.gif" class="sweet">
+<img src="images/textsweetthings.gif" class="sweet">
 </body>
 </html>
+
