Fix image paths in page2.html
Updated image paths to use 'images/' directory.

--- a/page2.html
+++ b/page2.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <img src="pinkstars.png" alt="Pink Stars" class="design1">
+    <img src="images/pinkstars.png" alt="Pink Stars" class="design1">
     <h1>HAPPII 19TH BIRTHDAY, KRIZZIALLAINE!!</h1>
     <p id="p1"> <strong>  To My Senior High School BestFriend </strong> </p>
     <p id="p2"> <i>I'm wishing you all the gooood things this world could offer!</i></p> 
@@ -18,13 +18,14 @@
     
 
     <h1 id="h2"> Are You Ready?</h1>
-    <img src="cake.png" alt="A virtual cake for my Kriz" width="300" 
+    <img src="images/cake.png" alt="A virtual cake for my Kriz" width="300" 
     style="display: block; margin-left: auto; margin-right: auto;">
 
 <p id="p3"> <a href="page3.html"> YAHOOO! </a> </p>
-<img src="hearts3.gif" alt="Heartu" class="design1">
+<img src="images/hearts3.gif" alt="Heartu" class="design1">
     
 </body>
+
 
 
 </html>
