--- a/page3.html
+++ b/page3.html
@@ -19,17 +19,17 @@
     </ul>
 </nav>
     <br> <br>
-    <img src="welcome20.gif" class="welcome">
+    <img src="images/welcome20.gif" class="welcome">
 <div class="gallery"> 
-    <img src="star.gif" alt="Twinkle Star" width="50px">
+    <img src="images/star.gif" alt="Twinkle Star" width="50px">
 </div>
 
 <div class="gallery">
-    <img src="cat67.gif" alt="Dancing Cat" width="50px">
+    <img src="images/cat67.gif" alt="Dancing Cat" width="50px">
 </div>
 
 <div class="gallery">
-    <img src="cake4.gif" alt="Yummy Cake" width="50px">
+    <img src="images/cake4.gif" alt="Yummy Cake" width="50px">
 </div>
 
  <br>
@@ -42,10 +42,11 @@
    <div id="menu"> <a href="Ropa.html">  Armansalon Wishes You Well! </a> </div>
 
 <br> <br>
-<img src="cat3.gif" alt="Cat Wave" class="bow">
+<img src="images/cat3.gif" alt="Cat Wave" class="bow">
 
     
 </body>
+
 
 
 
