--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 <body>
 <br> <br>
 <br> <br>
-<img src="images/welcome7.gif" alt="Welcome Banner" class="welcome">
+<img src="./images/welcome7.gif" alt="Welcome Banner" class="welcome">
 <br>
  <p style="color: rgba(43, 42, 42, 0.889); font-size: medium; text-align: center; font-family: sans-serif;">  Collage Pictures are over-rated! Here's a website made just for you hehe :> </p>
  <p style="color: rgba(68, 67, 67, 0.889); font-size: large; text-align: center;"> <strong> Enjoy Exploring! </strong></p>
  <br>
-<img src="images/200w.gif" class="cake">
+<img src="./images/200w.gif" class="cake">
 <div class="audio">
     <audio controls autoplay loop>
-    <source src="Happy Birthday 80's - E's Jammy Jams.mp3" type="audio/mpeg">
+    <source src="images/Happy Birthday 80's - E's Jammy Jams.mp3" type="audio/mpeg">
 </audio>
  </div>
 
@@ -53,4 +53,5 @@ Created w/love
 <img src="images/textsweetthings.gif" class="sweet">
 </body>
 </html>
+
 
