Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <img src="./images/200w.gif" class="cake">
 <div class="audio">
     <audio controls autoplay loop>
-    <source src="images/Happy Birthday 80's - E's Jammy Jams.mp3" type="audio/mpeg">
+    <source src="./images/Happy Birthday 80's - E's Jammy Jams.mp3" type="audio/mpeg">
 </audio>
  </div>
 
@@ -53,5 +53,6 @@ Created w/love
 <img src="images/textsweetthings.gif" class="sweet">
 </body>
 </html>
+
 
 
