--- a/Ropa.html
+++ b/Ropa.html
@@ -21,7 +21,8 @@
     <br> <br>
     <br> <br>
     <br> <br>
-    <p style="font-family: Verdana, Geneva, Tahoma, sans-serif; text-align: center; font-size: large; color: rgb(255, 255, 255);"> <strong> Play Me! </strong> </p>
+    <p style="font-family: Verdana, Geneva, Tahoma, sans-serif; text-align: center; font-size: large; color: rgb(255, 255, 255);  -webkit-text-stroke: 2px black; /* outline width and color */
+  text-stroke: 2px black;"> <strong> Play Me! </strong> </p>
         <div class="audio">
         <audio controls loop>
         <source src="images/Happy Birthday (at the Pub) - E's Jammy Jams.mp3" type="audio/mpeg">
@@ -139,5 +140,6 @@
 
 
 </html>
+
 
 
