--- a/Ropa.html
+++ b/Ropa.html
@@ -22,7 +22,7 @@
     <br> <br>
     <br> <br>
     <p style="font-family: Verdana, Geneva, Tahoma, sans-serif; text-align: center; font-size: large; color: rgb(255, 255, 255);  -webkit-text-stroke: 2px black; /* outline width and color */
-  text-stroke: 2px black;"> <strong> Play Me! </strong> </p>
+  text-stroke: 2px black;"> Play Me! </p>
         <div class="audio">
         <audio controls loop>
         <source src="images/Happy Birthday (at the Pub) - E's Jammy Jams.mp3" type="audio/mpeg">
@@ -140,6 +140,7 @@
 
 
 </html>
+
 
 
 
