--- a/Ropa.html
+++ b/Ropa.html
@@ -32,7 +32,7 @@
         <img src="images/star68.gif" class="star">
         <br>
         <div id="container1">    
-        <p id="Arm" > Chie's Letter!</p>
+        <p id="Arm" > From: Chie</p>
         <p style="font-family: Arial, Helvetica, sans-serif; margin-left: 2%; margin-right: 2%;">
         Hi, Krizz! Happiest Birthday to you! Sorry ngayon ko lang natapos 'tong website, hope you like it hehez. Maayos muna typings ko. Bagay ba? HAHAHA.
         </p>
@@ -62,7 +62,7 @@
         <img src="images/star68.gif" class="star">
         <br>
         <div id="container2">
-        <p id="Arm" > Eddy's Letter!</p>
+        <p id="Arm" > From: Eddy</p>
         <p style="font-family: Arial, Helvetica, sans-serif; text-align: side; margin-left: 2%; margin-right: 2%;"> 
         HAPPY HAPPY 19th BIRTHDAYYY KRIZZZ!!! im so so proud sa lahat ng achievements you’ve earned since then, i love youuu so muchhie and i miss everything about shs na we get to bond together araw araw na walang iniintinding mga responsibilities unlike now sa college, i hope you’re happy with your college friends. pls know na you can still count on us and lagi kaming makikinig with all of the stories you want to share, stay who u areee and ingat u palagi bae komatsuuuu kei, LOVE YAHH!!!!
         </p>
@@ -73,7 +73,7 @@
         <img src="images/star68.gif" class="star">
         <br>
         <div id="container3">
-        <p id="Arm" > DK's Letter!</p>
+        <p id="Arm" > From: DK </p>
         <p style="font-family: Arial, Helvetica, sans-serif; margin-left: 2%; margin-right: 2%;"> 
         hello, krizz! hapeehhhhh-hapeeehhh-happeeeeehhh birthdayyyyyyy!!! justtt wanna let youu knowww na sobrangg proud ako sauu — napaka independent mo naaaa T T.  thankyouuu for being one of my closestestest friendddd. masaya ako sa kung anong narating mo at mararating mong babae kang napakatalented mooo! goodluckk and godbless on your college journeyyy, krizzz!! kapag may kailangan ka, basta hindi pera — and2lang ako! habadudeeey agaiiinnn and imyyyy!
         </p>
@@ -84,7 +84,7 @@
         <img src="images/star68.gif" class="star">
         <br>
         <div id="container4">
-        <p id="Arm" > Melay's Letter!</p>
+        <p id="Arm" >  From: Melay </p>
         <p style="font-family: Arial, Helvetica, sans-serif; margin-left: 2%; margin-right: 2%;"> 
         krizz, krizmeow, komatsu, HAPPY 19th BIRTHDAY!! I love you always and I’m always here to support you, hindi man tayo araw araw na nagkikita and nagbobond you will always have a special place in my heart and grateful ako to be your friend, acquaintance, one call away bish, and to be your supporter. KRIZZ always remember to be happy sa lahat ng ginagawa and gagawin mo pa and sana u always make the most out of it… treat everything w understanding, love, and empathy, always rooting for u! love you and God bless you
         </p>
@@ -95,7 +95,7 @@
         <img src="images/star68.gif" class="star">
         <br>
         <div id="container5">
-        <p id="Arm" > Vine's Letter!</p>
+        <p id="Arm" > From: Vine</p>
         <p style="font-family: Arial, Helvetica, sans-serif; margin-left: 2%; margin-right: 2%;"> 
         Hello Krizz! Happy 19th Birthday, ako to si devine, yung mahal na mahal ka. I'm so grateful that you and I met, thank you for bringing friendship to me, very organic? OVER, I miss you so much krizz, I know na we barely meet each other, but you know how much I love you, I wish you the best in your life, alam ko na you'll be successful and we'll all be successful, continue to shine in your world, continue to bring happiness to other people, you'll always be my friend, and thank God I met you, cause you're such a great friend, sa kada kwentuhan, advices, iyakan, kagagahan, etc. Always take care of yourself, unahin mo palagi yung sarili mo, and do things that would make you happy. Prioritize yourself at wag yung ibang tao, you are the main character of your life. I'm always here Kriz,z, call me and I'll be there, I'LL BE THERE?????? I LOVE YOU BEBE! AND I MISS YOU SO MUCH
         </p>
@@ -106,7 +106,7 @@
         <img src="images/star68.gif" class="star">
         <br>
         <div id="container6">
-        <p id="Arm" > Luwi's Letter!</p>
+        <p id="Arm" > From: Luwi</p>
         <p style="font-family: Arial, Helvetica, sans-serif; margin-left: 2%; margin-right: 2%;"> 
         HaHaHaHaHappy 19th Krizzy! Ona s lhat, please take care of your well-being: physical, emotional, mental, and physiological. We'd only seen each other once sa jeep and masasabi ko lang na imysm ahsahshahshahha lagi kitang naaalala 'pag my nkketa aqng poza sa neu garden nkabilad s araw tpoz si google photos binibring back yung old photos ng mga posa na pini-pic nten nung st week yung umupo pa sa lesson plan nten (kapal dba?💢). U have a bright future ahead of you dahil alam q npka talintadu mu!! nag glow up kn nga ih alam mong nkatakas na sa ths ahshahsahsa miss you bes (pag may time sali kyo ni melai sa dance workshop 🙏🙏🙏). Happy bortday ole 
         ---lowi, future RMT 💉
@@ -118,7 +118,7 @@
         <br>
         </div>
         <div id="container7">
-        <p id="Arm" > Yuwan's Letter!</p>
+        <p id="Arm" > From: Yuwan</p>
         <p style="font-family: Arial, Helvetica, sans-serif; margin-left: 2%; margin-right: 2%;"> 
         happiest birthday, krizz ! grabe, i keep saying this pero you're the person i've known the longest that i still consider a best friend, and that means so so SO much to me. i really didn't expect we'd become this close, especially after elementary when nag divert ang paths natin, but i'm so glad they crossed again kasi you're seriously one of the best friends i've ever had. i know you've had painful experiences in the past and while that should have made you bitter, you became kinder and gentler towards people because of it and you've developed a different kind of empathy that not many people have. i will admit, i wish i could have been a better friend for you during our shs times, kasi i can read when you're not okay, you wear your heart on your sleeves e, pero most times, nahihiya lang din talaga akong i-comfort or samahan ka. pero siguro ang wish ko na lang talaga is for the universe to give you the friends that we couldn't be and i hope that you've gotten them. i also hope that the universe becomes kinder to you, since it's been so cruel. dapat lahat ng paghihirap mo, maipasa kay sara duterte at bbm e. pero seriously, you've truly made a mark in my life kahit na hindi ko 'yun pinapakita or sinasabi. i'm so incredibly grateful you're here and i can't wait til we grow old at makita ko na lahat ng bunga ng paghihirap mo. you're the most talented person i know. your abilities should be celebrated, rather than taken advantage of. and sana, and i mean this in the most genuine way, but sana that soft and sensitive krizz doesn't change just because of this cutthroat world. i hope that you succeed without having to set aside your feelings and being cold, kasi that makes you truly you. i love you so much and i can't wait to hang out again. HAPPIEST BIRTHDAY KRIZZZZ
         </p>
@@ -140,6 +140,7 @@
 
 
 </html>
+
 
 
 
